kubernetes/frontend/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: biblioteca
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080 # Puedes especificar un puerto entre 30000-32767, o dejar que Kubernetes elija uno.
  type: NodePort
