kubernetes/frontend/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: biblioteca
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /biblioteca1/v1/$2
spec:
  rules:
  - host: biblioteca.example.com # Mantén esta regla, no la elimines
    http:
      paths:
      - backend:
          service:
            name: backend-svc
            port:
              number: 8000
        path: /biblioteca1/v1(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: frontend-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  - http: # <--- ¡AÑADE ESTA NUEVA SECCIÓN! Esto es para la IP directa.
      paths:
      - backend:
          service:
            name: frontend-svc
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: backend-svc
            port:
              number: 8000
        path: /biblioteca1/v1(/|$)(.*)
        pathType: Prefix
